# python-template

./: .gitignore  .sublime-project  LICENSE  Makefile  Pipfile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  py.sh
app/: __init__.py  foo.py
config/: app.json  log.json
docs/: conf.py  index.rst  sampleapp.rst
sampleapp/: __init__.py  __version__.py  config.py  foo.py  logger.py  metrics.py
src/: foo.py  main.py
tests/: __init__.py  test_config.py  test_foo.py  test_logger.py
