[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Yagnik"]

[tool.poetry.dependencies]
python = "^3.7"
prometheus-client = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
hypothesis = "*"
mypy = "*"
pydocstyle = "*"
flake8 = "*"
flake8-mypy = "*"
flake8-black = "*"
pytest-flake8 = "*"
pytest-cov = "*"
pytest-docstyle = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
