[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
prometheus_client = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
hypothesis = "*"
mypy = "*"
pydocstyle = "*"
flake8 = "*"
flake8-mypy = "*"
flake8-black = "*"
pytest-flake8 = "*"
pytest-cov = "*"
pytest-docstyle = "*"
coverage = {extras = ["toml"], version = "^5.0.4"}
vcrpy = "^4.0.2"
ipython = "^7.13.0"

[tool.black]
line-length = 120
target-version = ["py38"]


[tool.coverage.run]
data_file = "tmp/coverage"
branch = true
omit = []

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
